Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-10725

Hindi (Devanagari) rendering regression on Symbian

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 4.7.2
    • 4.6.3
    • None
    • ea5281e6cd1ebc63e080f7232d4eb28f1610539e

    Description

      When drawing a string with Utf-16 codes 0x0915 (क) and 0x0947 (े), the combined result (के) is shown incorrectly.

      It was nearly correct in Qt 4.6.2 on XM5800 with the upper part slightly shifted to the right. (see attached Qt_4.6.2_XM5800.jpg). Reproducable on 5.0 Emulator.
      It looks worse in Qt 4.7.0-beta1 on XM5800 with the upper part too much on the left. (see Qt_4.7.0-beta1_XM5800.jpg).

      It looks horrible in Qt 4.7-master on 3.1 Emulator, where the upper part is about 65 pixels too much on the left. (see Qt_4.7-master_3.1Emulator.png). However, It looks like that also with Qt 4.7.0-beta1 on 3.2 Emulator... So maybe, the emulator 3.x shots are not very helpful

      This happens with the raster paint engine, aswell as with the openVG paint engine (on N8).

      Attachments

        1. Qt_4.6.2_XM5800.jpg
          Qt_4.6.2_XM5800.jpg
          2 kB
        2. Qt_4.7.0-beta1_XM5800.jpg
          Qt_4.7.0-beta1_XM5800.jpg
          2 kB
        3. Qt_4.7-master_3.1Emulator.png
          Qt_4.7-master_3.1Emulator.png
          7 kB
        4. QTBUG_10725_hinditextrendering.ZIP
          0.6 kB
        5. QTBUG-10725-fix.diff
          2 kB
        6. SymbianGlyphMetrics.png
          SymbianGlyphMetrics.png
          26 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            portale Alessandro Portale
            portale Alessandro Portale
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes